--- a/AkameCore/AkameCore.vcxproj.filters
+++ b/AkameCore/AkameCore.vcxproj.filters
@@ -281,6 +281,7 @@
     </ClInclude>
     <ClInclude Include="Header Files\Core\Editor\PropertiesWindow\InspectorWindow.h" />
     <ClInclude Include="Header Files\Core\Editor\ViewPort\ViewPortWindow.h" />
+    <ClInclude Include="Header Files\Core\Editor\SettingsWindow\LightsAndShadows.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Source Files\Animation\AnimationControllerSystem.cpp">
@@ -438,5 +439,6 @@
     </ClCompile>
     <ClCompile Include="Source Files\Core\Editor\InspectorWindow.cpp" />
     <ClCompile Include="Source Files\Core\Editor\ViewPortWindow.cpp" />
+    <ClCompile Include="Source Files\Core\Editor\LightsAndShadows.cpp" />
   </ItemGroup>
 </Project>
