--- a/AkameCore/AkameCore.vcxproj
+++ b/AkameCore/AkameCore.vcxproj
@@ -115,12 +115,14 @@
     <ClInclude Include="Header Files\Core\Debug\Debug.h" />
     <ClInclude Include="Header Files\Core\Editor\EditorUI.h" />
     <ClInclude Include="Header Files\Core\Editor\EntityDescriptionSystem.h" />
+    <ClInclude Include="Header Files\Core\Editor\ImGuiUtils.h" />
     <ClInclude Include="Header Files\Core\Editor\SceneHierarchyWindow\SceneHierarchyWindow.h" />
     <ClInclude Include="Header Files\Core\Editor\SettingsWindow\LightsAndShadows.h" />
     <ClInclude Include="Header Files\Core\Editor\ViewPort\ViewPortWindow.h" />
     <ClInclude Include="Header Files\Core\Engine.h" />
     <ClInclude Include="Header Files\Core\Input.h" />
     <ClInclude Include="Header Files\Core\Log\Log.h" />
+    <ClInclude Include="Header Files\Core\Reflection\Reflection.h" />
     <ClInclude Include="Header Files\Core\Scene.h" />
     <ClInclude Include="Header Files\Core\Window.h" />
     <ClInclude Include="Header Files\Math\EngineMath.h" />
@@ -154,6 +156,8 @@
     <ClInclude Include="Header Files\Core\Editor\PropertiesWindow\InspectorWindow.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Source Files\Core\Editor\ImGuiUtils.cpp" />
+    <ClCompile Include="Source Files\Core\Reflection\Reflection.cpp" />
     <ClCompile Include="Source Files\Core\Editor\InspectorWindow.cpp" />
     <ClCompile Include="Source Files\Animation\AnimationControllerSystem.cpp" />
     <ClCompile Include="Source Files\Animation\SkeletalMeshRenderingSystem.cpp" />
