*Added a basic content browser *Changed imgui ini file location *Added icons for windows and application

--- a/AkameCore/AkameCore.vcxproj
+++ b/AkameCore/AkameCore.vcxproj
@@ -113,9 +113,11 @@
     <ClInclude Include="Header Files\Components\Rendering\Mesh.h" />
     <ClInclude Include="Header Files\Components\Rendering\Transform.h" />
     <ClInclude Include="Header Files\Core\Debug\Debug.h" />
+    <ClInclude Include="Header Files\Core\Editor\ContentBrowsing\ContentBrowser.h" />
     <ClInclude Include="Header Files\Core\Editor\EditorUI.h" />
     <ClInclude Include="Header Files\Core\Editor\EntityDescriptionSystem.h" />
     <ClInclude Include="Header Files\Core\Editor\ImGuiUtils.h" />
+    <ClInclude Include="Header Files\Core\Editor\PropertiesWindow\InspectorWindow.h" />
     <ClInclude Include="Header Files\Core\Editor\SceneHierarchyWindow\SceneHierarchyWindow.h" />
     <ClInclude Include="Header Files\Core\Editor\SettingsWindow\LightsAndShadows.h" />
     <ClInclude Include="Header Files\Core\Editor\ViewPort\ViewPortWindow.h" />
@@ -153,12 +155,8 @@
     <ClInclude Include="Header Files\Rendering\System\TiledRenderer.h" />
     <ClInclude Include="Header Files\Rendering\Texture.h" />
     <ClInclude Include="Header Files\Scripting\BehaviourSystem.h" />
-    <ClInclude Include="Header Files\Core\Editor\PropertiesWindow\InspectorWindow.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Source Files\Core\Editor\ImGuiUtils.cpp" />
-    <ClCompile Include="Source Files\Core\Reflection\Reflection.cpp" />
-    <ClCompile Include="Source Files\Core\Editor\InspectorWindow.cpp" />
     <ClCompile Include="Source Files\Animation\AnimationControllerSystem.cpp" />
     <ClCompile Include="Source Files\Animation\SkeletalMeshRenderingSystem.cpp" />
     <ClCompile Include="Source Files\Animation\SkinnedRendererPipeline.cpp" />
@@ -175,12 +173,16 @@
     <ClCompile Include="Source Files\Components\Mesh.cpp" />
     <ClCompile Include="Source Files\Components\SkeletalMesh.cpp" />
     <ClCompile Include="Source Files\Core\Debug\Debug.cpp" />
+    <ClCompile Include="Source Files\Core\Editor\ContentBrowser.cpp" />
     <ClCompile Include="Source Files\Core\Editor\EditorUI.cpp" />
     <ClCompile Include="Source Files\Core\Editor\EntityDescriptionSystem.cpp" />
+    <ClCompile Include="Source Files\Core\Editor\ImGuiUtils.cpp" />
+    <ClCompile Include="Source Files\Core\Editor\InspectorWindow.cpp" />
     <ClCompile Include="Source Files\Core\Editor\LightsAndShadows.cpp" />
     <ClCompile Include="Source Files\Core\Editor\SceneHierarchyWindow.cpp" />
     <ClCompile Include="Source Files\Core\Editor\ViewPortWindow.cpp" />
     <ClCompile Include="Source Files\Core\Input.cpp" />
+    <ClCompile Include="Source Files\Core\Reflection\Reflection.cpp" />
     <ClCompile Include="Source Files\Core\Scene.cpp" />
     <ClCompile Include="Source Files\Core\Window.cpp" />
     <ClCompile Include="Source Files\Log\Log.cpp" />
