Started Working on akame Exporter

--- a/Samples/AnimationTest/AnimationTest.vcxproj
+++ b/Samples/AnimationTest/AnimationTest.vcxproj
@@ -62,6 +62,10 @@
       <DebugInformationFormat>EditAndContinue</DebugInformationFormat>
       <Optimization>Disabled</Optimization>
     </ClCompile>
+    <ResourceCompile>
+      <PreprocessorDefinitions>DEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <AdditionalIncludeDirectories>..\..\AkameCore\Header Files;..\..\ECS\HeaderFiles;..\..\AkameCore\vendor;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+    </ResourceCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
@@ -81,6 +85,10 @@
       <MinimalRebuild>false</MinimalRebuild>
       <StringPooling>true</StringPooling>
     </ClCompile>
+    <ResourceCompile>
+      <PreprocessorDefinitions>NDEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <AdditionalIncludeDirectories>..\..\AkameCore\Header Files;..\..\ECS\HeaderFiles;..\..\AkameCore\vendor;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+    </ResourceCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
@@ -91,6 +99,17 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Source Files\Source.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="..\..\Assets\EngineAssets\AppIcons\Png\icon.ico" />
+    <None Include="..\..\Assets\EngineAssets\AppIcons\logo1_128x128.ico" />
+    <None Include="..\..\Assets\EngineAssets\AppIcons\logo1_16x16.ico" />
+    <None Include="..\..\Assets\EngineAssets\AppIcons\logo1_256x256.ico" />
+    <None Include="..\..\Assets\EngineAssets\AppIcons\logo1_32x32.ico" />
+    <None Include="..\..\Assets\EngineAssets\AppIcons\logo1_64x64.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="..\..\resources.rc" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
