--- a/Akame/AkameEngine.vcxproj.filters
+++ b/Akame/AkameEngine.vcxproj.filters
@@ -16,37 +16,37 @@
     <Filter Include="..\Assets\EngineAssets\AppIcons\Png">
       <UniqueIdentifier>{9B75F1A2-072F-5C4D-908E-7627FC4612BD}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Source Files">
-      <UniqueIdentifier>{E9C7FDCE-D52A-8D73-7EB0-C5296AF258F6}</UniqueIdentifier>
+    <Filter Include="Source">
+      <UniqueIdentifier>{56EB95D1-428D-C0A7-2B48-D4FB178947F8}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Source Files\Source.cpp">
-      <Filter>Source Files</Filter>
+    <ClCompile Include="Source\Source.cpp">
+      <Filter>Source</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <None Include="..\..\Assets\EngineAssets\AppIcons\Png\icon.ico">
+    <None Include="..\Assets\EngineAssets\AppIcons\Png\icon.ico">
       <Filter>..\Assets\EngineAssets\AppIcons\Png</Filter>
     </None>
-    <None Include="..\..\Assets\EngineAssets\AppIcons\logo1_128x128.ico">
+    <None Include="..\Assets\EngineAssets\AppIcons\logo1_128x128.ico">
       <Filter>..\Assets\EngineAssets\AppIcons</Filter>
     </None>
-    <None Include="..\..\Assets\EngineAssets\AppIcons\logo1_16x16.ico">
+    <None Include="..\Assets\EngineAssets\AppIcons\logo1_16x16.ico">
       <Filter>..\Assets\EngineAssets\AppIcons</Filter>
     </None>
-    <None Include="..\..\Assets\EngineAssets\AppIcons\logo1_256x256.ico">
+    <None Include="..\Assets\EngineAssets\AppIcons\logo1_256x256.ico">
       <Filter>..\Assets\EngineAssets\AppIcons</Filter>
     </None>
-    <None Include="..\..\Assets\EngineAssets\AppIcons\logo1_32x32.ico">
+    <None Include="..\Assets\EngineAssets\AppIcons\logo1_32x32.ico">
       <Filter>..\Assets\EngineAssets\AppIcons</Filter>
     </None>
-    <None Include="..\..\Assets\EngineAssets\AppIcons\logo1_64x64.ico">
+    <None Include="..\Assets\EngineAssets\AppIcons\logo1_64x64.ico">
       <Filter>..\Assets\EngineAssets\AppIcons</Filter>
     </None>
   </ItemGroup>
   <ItemGroup>
-    <ResourceCompile Include="..\..\resources.rc">
+    <ResourceCompile Include="..\resources.rc">
       <Filter>..</Filter>
     </ResourceCompile>
   </ItemGroup>
