--- a/Assets/EngineAssets/imgui.ini
+++ b/Assets/EngineAssets/imgui.ini
@@ -6,9 +6,9 @@ Collapsed=0
 
 [Window][SceneGraph]
 Pos=0,21
-Size=362,705
+Size=416,494
 Collapsed=0
-DockId=0x00000003,0
+DockId=0x00000002,0
 
 [Window][DirShadowMap]
 ViewportPos=2316,128
@@ -24,39 +24,39 @@ Collapsed=0
 DockId=0x00000004,1
 
 [Window][properties]
-Pos=1511,21
-Size=409,705
+Pos=877,21
+Size=203,494
 Collapsed=0
-DockId=0x00000004,0
+DockId=0x00000006,0
 
 [Window][DockSpaceViewport_11111111]
 Pos=0,21
-Size=1920,996
+Size=1080,699
 Collapsed=0
 
 [Window][Shadows:]
-Pos=1511,21
-Size=409,705
+Pos=877,21
+Size=203,494
 Collapsed=0
-DockId=0x00000004,1
+DockId=0x00000006,1
 
 [Window][Scene##0]
-Pos=364,21
-Size=1145,705
+Pos=418,21
+Size=457,494
 Collapsed=0
-DockId=0x00000002,0
+DockId=0x00000004,0
 
 [Window][Dear ImGui Demo]
 Pos=0,21
-Size=362,705
-Collapsed=0
-DockId=0x00000003,1
-
-[Window][Scene##1]
-Pos=364,21
-Size=1145,705
+Size=416,494
 Collapsed=0
 DockId=0x00000002,1
+
+[Window][Scene##1]
+Pos=418,21
+Size=457,494
+Collapsed=0
+DockId=0x00000004,1
 
 [Window][Open]
 Pos=0,683
@@ -68,19 +68,42 @@ DockId=0x00000008,0
 Pos=364,21
 Size=1155,705
 Collapsed=0
-DockId=0x00000002,0
+DockId=0x00000004,0
 
 [Window][Scene##3]
 Pos=364,21
 Size=1185,683
 Collapsed=0
-DockId=0x00000002,3
+DockId=0x00000004,3
 
 [Window][Project]
-Pos=0,728
-Size=1920,289
+Pos=0,517
+Size=1080,203
 Collapsed=0
 DockId=0x00000005,0
+
+[Window][Test Window]
+Pos=60,60
+Size=32,35
+Collapsed=0
+
+[Window][Exporter]
+ViewportPos=976,233
+ViewportId=0x4AD707D2
+Pos=0,447
+Size=362,258
+Collapsed=0
+DockId=0x00000009,0
+
+[Window][Browse]
+ViewportPos=654,99
+ViewportId=0x7B719F09
+Size=1110,606
+Collapsed=0
+
+[Window][]
+Size=752,677
+Collapsed=0
 
 [Table][0x49F8DCEA,3]
 RefScale=15
@@ -110,13 +133,15 @@ Column 4  Weight=1.0000
 Column 5  Width=-1
 
 [Docking][Data]
-DockSpace         ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,44 Size=1920,996 Split=Y
+DockSpace         ID=0x8B93E3BD Window=0xA787BDB4 Pos=112,156 Size=1080,699 Split=Y
   DockNode        ID=0x00000001 Parent=0x8B93E3BD SizeRef=1920,705 Split=Y
-    DockNode      ID=0x00000007 Parent=0x00000001 SizeRef=1920,660 Split=X
-      DockNode    ID=0x00000003 Parent=0x00000007 SizeRef=362,996 Selected=0xC15A3217
-      DockNode    ID=0x00000006 Parent=0x00000007 SizeRef=1556,996 Split=X
-        DockNode  ID=0x00000002 Parent=0x00000006 SizeRef=1145,996 CentralNode=1 Selected=0xA36AA222
-        DockNode  ID=0x00000004 Parent=0x00000006 SizeRef=409,996 Selected=0x87C331C7
+    DockNode      ID=0x00000007 Parent=0x00000001 SizeRef=1920,660 Split=X Selected=0xA36AA222
+      DockNode    ID=0x0000000A Parent=0x00000007 SizeRef=1556,705 Split=X Selected=0xA36AA222
+        DockNode  ID=0x00000002 Parent=0x0000000A SizeRef=416,705 Selected=0xC15A3217
+        DockNode  ID=0x00000004 Parent=0x0000000A SizeRef=1138,705 CentralNode=1 Selected=0xA36AA222
+      DockNode    ID=0x00000003 Parent=0x00000007 SizeRef=362,705 Split=Y
+        DockNode  ID=0x00000006 Parent=0x00000003 SizeRef=362,445 Selected=0x87C331C7
+        DockNode  ID=0x00000009 Parent=0x00000003 SizeRef=362,258 Selected=0xFFD74798
     DockNode      ID=0x00000008 Parent=0x00000001 SizeRef=1920,334 Selected=0x04422C9A
   DockNode        ID=0x00000005 Parent=0x8B93E3BD SizeRef=1920,289 Selected=0xE00EE972
 
