--- a/tools/AkameExporter/Akame3DExporter.vcxproj
+++ b/tools/AkameExporter/Akame3DExporter.vcxproj
@@ -58,15 +58,20 @@
       <PrecompiledHeader>NotUsing</PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
       <PreprocessorDefinitions>DEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>..\..\AkameCore\Header Files;..\..\ECS\HeaderFiles;..\..\AkameCore\vendor;..\..\AkameCore\vendor\assimp\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>..\..\AkameCore\vendor\glfw\include;..\..\AkameCore\vendor\glad-akame-;..\..\AkameCore\vendor;..\..\AkameCore\vendor\imGui;..\..\AkameCore\vendor\assimp\include;..\..\ECS\HeaderFiles;..\..\AkameCore\Header Files;..\..\AkameCore\vendor\pugixml\src;..\..\AkameCore\vendor\spdlog\include;..\..\AkameCore\vendor\PhysX\physx\include;..\..\AkameCore\vendor\PhysX\physx\source\physxextensions\src;..\..\AkameCore\vendor\PhysX\pxshared\include;..\..\AkameCore\vendor\PhysX\physx\source\foundation\include;..\..\AkameCore\vendor\PhysX\physx\snippets;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <DebugInformationFormat>EditAndContinue</DebugInformationFormat>
       <Optimization>Disabled</Optimization>
+      <LanguageStandard>stdcpp17</LanguageStandard>
     </ClCompile>
+    <ResourceCompile>
+      <PreprocessorDefinitions>DEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <AdditionalIncludeDirectories>..\..\AkameCore\vendor\glfw\include;..\..\AkameCore\vendor\glad-akame-;..\..\AkameCore\vendor;..\..\AkameCore\vendor\imGui;..\..\AkameCore\vendor\assimp\include;..\..\ECS\HeaderFiles;..\..\AkameCore\Header Files;..\..\AkameCore\vendor\pugixml\src;..\..\AkameCore\vendor\spdlog\include;..\..\AkameCore\vendor\PhysX\physx\include;..\..\AkameCore\vendor\PhysX\physx\source\physxextensions\src;..\..\AkameCore\vendor\PhysX\pxshared\include;..\..\AkameCore\vendor\PhysX\physx\source\foundation\include;..\..\AkameCore\vendor\PhysX\physx\snippets;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+    </ResourceCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>AkameCore.lib;assimp-vc142-mtd.lib;%(AdditionalDependencies)</AdditionalDependencies>
-      <AdditionalLibraryDirectories>..\..\AkameCore\bin\Debug;..\..\AkameCore\vendor\assimp\lib\Debug;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>AkameCore.lib;glfw3.lib;opengl32.lib;imGui.lib;PhysX_64.lib;PhysXCommon_64.lib;PhysXCooking_64.lib;PhysXFoundation_64.lib;PhysXPvdSDK_static_64.lib;PhysXExtensions_static_64.lib;pugixml.lib;assimp-vc142-mtd.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>..\..\AkameCore\bin\Debug;..\..\AkameCore\vendor\glfw\src\Debug;..\..\AkameCore\vendor\PhysX\physx\bin\win.x86_64.vc142.md\Debug;..\..\AkameCore\vendor\imGui\windows\Debug;..\..\AkameCore\vendor\assimp\lib\Debug;..\..\AkameCore\vendor\pugixml\src\bin\Debug;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -74,23 +79,47 @@
       <PrecompiledHeader>NotUsing</PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
       <PreprocessorDefinitions>NDEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>..\..\AkameCore\Header Files;..\..\ECS\HeaderFiles;..\..\AkameCore\vendor;..\..\AkameCore\vendor\assimp\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>..\..\AkameCore\vendor\glfw\include;..\..\AkameCore\vendor\glad-akame-;..\..\AkameCore\vendor;..\..\AkameCore\vendor\imGui;..\..\AkameCore\vendor\assimp\include;..\..\ECS\HeaderFiles;..\..\AkameCore\Header Files;..\..\AkameCore\vendor\pugixml\src;..\..\AkameCore\vendor\spdlog\include;..\..\AkameCore\vendor\PhysX\physx\include;..\..\AkameCore\vendor\PhysX\physx\source\physxextensions\src;..\..\AkameCore\vendor\PhysX\pxshared\include;..\..\AkameCore\vendor\PhysX\physx\source\foundation\include;..\..\AkameCore\vendor\PhysX\physx\snippets;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <Optimization>Full</Optimization>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <MinimalRebuild>false</MinimalRebuild>
       <StringPooling>true</StringPooling>
+      <LanguageStandard>stdcpp17</LanguageStandard>
     </ClCompile>
+    <ResourceCompile>
+      <PreprocessorDefinitions>NDEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <AdditionalIncludeDirectories>..\..\AkameCore\vendor\glfw\include;..\..\AkameCore\vendor\glad-akame-;..\..\AkameCore\vendor;..\..\AkameCore\vendor\imGui;..\..\AkameCore\vendor\assimp\include;..\..\ECS\HeaderFiles;..\..\AkameCore\Header Files;..\..\AkameCore\vendor\pugixml\src;..\..\AkameCore\vendor\spdlog\include;..\..\AkameCore\vendor\PhysX\physx\include;..\..\AkameCore\vendor\PhysX\physx\source\physxextensions\src;..\..\AkameCore\vendor\PhysX\pxshared\include;..\..\AkameCore\vendor\PhysX\physx\source\foundation\include;..\..\AkameCore\vendor\PhysX\physx\snippets;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+    </ResourceCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalDependencies>AkameCore.lib;assimp-vc142-mt.lib;%(AdditionalDependencies)</AdditionalDependencies>
-      <AdditionalLibraryDirectories>..\..\AkameCore\bin\Release;..\..\AkameCore\vendor\assimp\lib\Release;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>AkameCore.lib;glfw3.lib;opengl32.lib;imGui.lib;PhysX_64.lib;PhysXCommon_64.lib;PhysXCooking_64.lib;PhysXFoundation_64.lib;PhysXPvdSDK_static_64.lib;PhysXExtensions_static_64.lib;pugixml.lib;assimp-vc142-mt.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>..\..\AkameCore\bin\Release;..\..\AkameCore\vendor\glfw\src\Release;..\..\AkameCore\vendor\PhysX\physx\bin\win.x86_64.vc142.md\Release;..\..\AkameCore\vendor\imGui\windows\Release;..\..\AkameCore\vendor\assimp\lib\Release;..\..\AkameCore\vendor\pugixml\src\bin\Release;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="ExporterUI.h" />
+    <ClInclude Include="FileOpenSaveDialogBox.h" />
+    <ClInclude Include="OS_Interface.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="ExporterUI.cpp" />
+    <ClCompile Include="FileOpenSaveDialogBox.cpp" />
+    <ClCompile Include="OS_interface.cpp" />
     <ClCompile Include="Source.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="..\..\Assets\EngineAssets\AppIcons\Png\icon.ico" />
+    <None Include="..\..\Assets\EngineAssets\AppIcons\logo1_128x128.ico" />
+    <None Include="..\..\Assets\EngineAssets\AppIcons\logo1_16x16.ico" />
+    <None Include="..\..\Assets\EngineAssets\AppIcons\logo1_256x256.ico" />
+    <None Include="..\..\Assets\EngineAssets\AppIcons\logo1_32x32.ico" />
+    <None Include="..\..\Assets\EngineAssets\AppIcons\logo1_64x64.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="..\..\resources.rc" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
