fixed a minor bug where animation system freezes randomly

--- a/Assets/EngineAssets/imgui.ini
+++ b/Assets/EngineAssets/imgui.ini
@@ -105,6 +105,11 @@ Collapsed=0
 Size=752,677
 Collapsed=0
 
+[Window][DeltaTime]
+Pos=60,60
+Size=96,52
+Collapsed=0
+
 [Table][0x49F8DCEA,3]
 RefScale=15
 Column 0  Weight=1.0000
@@ -133,7 +138,7 @@ Column 4  Weight=1.0000
 Column 5  Width=-1
 
 [Docking][Data]
-DockSpace         ID=0x8B93E3BD Window=0xA787BDB4 Pos=112,156 Size=1080,699 Split=Y
+DockSpace         ID=0x8B93E3BD Window=0xA787BDB4 Pos=216,260 Size=1080,699 Split=Y
   DockNode        ID=0x00000001 Parent=0x8B93E3BD SizeRef=1920,705 Split=Y
     DockNode      ID=0x00000007 Parent=0x00000001 SizeRef=1920,660 Split=X Selected=0xA36AA222
       DockNode    ID=0x0000000A Parent=0x00000007 SizeRef=1556,705 Split=X Selected=0xA36AA222
