--- a/AkameCore/AkameCore.vcxproj.filters
+++ b/AkameCore/AkameCore.vcxproj.filters
@@ -222,7 +222,7 @@
     <ClInclude Include="Header Files\Core\Log\Log.h">
       <Filter>Header Files\Core\Log</Filter>
     </ClInclude>
-    <ClInclude Include="Header Files\Core\Reflection\Reflection.h">
+    <ClInclude Include="Header Files\Core\Reflection\ReflectionUIHandler.h">
       <Filter>Header Files\Core\Reflection</Filter>
     </ClInclude>
     <ClInclude Include="Header Files\Core\Scene.h">
@@ -315,6 +315,7 @@
     <ClInclude Include="Header Files\Scripting\BehaviourSystem.h">
       <Filter>Header Files\Scripting</Filter>
     </ClInclude>
+    <ClInclude Include="Header Files\Core\Reflection\ReflectionMeta.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Source Files\Animation\AnimationControllerSystem.cpp">
@@ -392,7 +393,7 @@
     <ClCompile Include="Source Files\Core\Input.cpp">
       <Filter>Source Files\Core</Filter>
     </ClCompile>
-    <ClCompile Include="Source Files\Core\Reflection\Reflection.cpp">
+    <ClCompile Include="Source Files\Core\Reflection\ReflectionUIHandler.cpp">
       <Filter>Source Files\Core\Reflection</Filter>
     </ClCompile>
     <ClCompile Include="Source Files\Core\Scene.cpp">
@@ -488,5 +489,6 @@
     <ClCompile Include="Source Files\stb_image.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Source Files\Core\Reflection\ReflectionMeta.cpp" />
   </ItemGroup>
 </Project>
