--- a/tools/AkameExporter/Akame3DExporter.vcxproj
+++ b/tools/AkameExporter/Akame3DExporter.vcxproj
@@ -58,14 +58,14 @@
       <PrecompiledHeader>NotUsing</PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
       <PreprocessorDefinitions>DEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>..\..\AkameCore\vendor\glfw\include;..\..\AkameCore\vendor\glad-akame-;..\..\AkameCore\vendor;..\..\AkameCore\vendor\imGui;..\..\AkameCore\vendor\assimp\include;..\..\ECS\HeaderFiles;..\..\AkameCore\Header Files;..\..\AkameCore\vendor\pugixml\src;..\..\AkameCore\vendor\spdlog\include;..\..\AkameCore\vendor\PhysX\physx\include;..\..\AkameCore\vendor\PhysX\physx\source\physxextensions\src;..\..\AkameCore\vendor\PhysX\pxshared\include;..\..\AkameCore\vendor\PhysX\physx\source\foundation\include;..\..\AkameCore\vendor\PhysX\physx\snippets;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>..\..\AkameCore\vendor\glfw\include;..\..\AkameCore\vendor\single_include\nlohmann;..\..\AkameCore\vendor\glad-akame-;..\..\AkameCore\vendor;..\..\AkameCore\vendor\imGui;..\..\AkameCore\vendor\assimp\include;..\..\ECS\HeaderFiles;..\..\AkameCore\Header Files;..\..\AkameCore\vendor\pugixml\src;..\..\AkameCore\vendor\spdlog\include;..\..\AkameCore\vendor\PhysX\physx\include;..\..\AkameCore\vendor\PhysX\physx\source\physxextensions\src;..\..\AkameCore\vendor\PhysX\pxshared\include;..\..\AkameCore\vendor\PhysX\physx\source\foundation\include;..\..\AkameCore\vendor\PhysX\physx\snippets;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <DebugInformationFormat>EditAndContinue</DebugInformationFormat>
       <Optimization>Disabled</Optimization>
       <LanguageStandard>stdcpp17</LanguageStandard>
     </ClCompile>
     <ResourceCompile>
       <PreprocessorDefinitions>DEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>..\..\AkameCore\vendor\glfw\include;..\..\AkameCore\vendor\glad-akame-;..\..\AkameCore\vendor;..\..\AkameCore\vendor\imGui;..\..\AkameCore\vendor\assimp\include;..\..\ECS\HeaderFiles;..\..\AkameCore\Header Files;..\..\AkameCore\vendor\pugixml\src;..\..\AkameCore\vendor\spdlog\include;..\..\AkameCore\vendor\PhysX\physx\include;..\..\AkameCore\vendor\PhysX\physx\source\physxextensions\src;..\..\AkameCore\vendor\PhysX\pxshared\include;..\..\AkameCore\vendor\PhysX\physx\source\foundation\include;..\..\AkameCore\vendor\PhysX\physx\snippets;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>..\..\AkameCore\vendor\glfw\include;..\..\AkameCore\vendor\single_include\nlohmann;..\..\AkameCore\vendor\glad-akame-;..\..\AkameCore\vendor;..\..\AkameCore\vendor\imGui;..\..\AkameCore\vendor\assimp\include;..\..\ECS\HeaderFiles;..\..\AkameCore\Header Files;..\..\AkameCore\vendor\pugixml\src;..\..\AkameCore\vendor\spdlog\include;..\..\AkameCore\vendor\PhysX\physx\include;..\..\AkameCore\vendor\PhysX\physx\source\physxextensions\src;..\..\AkameCore\vendor\PhysX\pxshared\include;..\..\AkameCore\vendor\PhysX\physx\source\foundation\include;..\..\AkameCore\vendor\PhysX\physx\snippets;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ResourceCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -79,7 +79,7 @@
       <PrecompiledHeader>NotUsing</PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
       <PreprocessorDefinitions>NDEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>..\..\AkameCore\vendor\glfw\include;..\..\AkameCore\vendor\glad-akame-;..\..\AkameCore\vendor;..\..\AkameCore\vendor\imGui;..\..\AkameCore\vendor\assimp\include;..\..\ECS\HeaderFiles;..\..\AkameCore\Header Files;..\..\AkameCore\vendor\pugixml\src;..\..\AkameCore\vendor\spdlog\include;..\..\AkameCore\vendor\PhysX\physx\include;..\..\AkameCore\vendor\PhysX\physx\source\physxextensions\src;..\..\AkameCore\vendor\PhysX\pxshared\include;..\..\AkameCore\vendor\PhysX\physx\source\foundation\include;..\..\AkameCore\vendor\PhysX\physx\snippets;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>..\..\AkameCore\vendor\glfw\include;..\..\AkameCore\vendor\single_include\nlohmann;..\..\AkameCore\vendor\glad-akame-;..\..\AkameCore\vendor;..\..\AkameCore\vendor\imGui;..\..\AkameCore\vendor\assimp\include;..\..\ECS\HeaderFiles;..\..\AkameCore\Header Files;..\..\AkameCore\vendor\pugixml\src;..\..\AkameCore\vendor\spdlog\include;..\..\AkameCore\vendor\PhysX\physx\include;..\..\AkameCore\vendor\PhysX\physx\source\physxextensions\src;..\..\AkameCore\vendor\PhysX\pxshared\include;..\..\AkameCore\vendor\PhysX\physx\source\foundation\include;..\..\AkameCore\vendor\PhysX\physx\snippets;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <Optimization>Full</Optimization>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
@@ -89,7 +89,7 @@
     </ClCompile>
     <ResourceCompile>
       <PreprocessorDefinitions>NDEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>..\..\AkameCore\vendor\glfw\include;..\..\AkameCore\vendor\glad-akame-;..\..\AkameCore\vendor;..\..\AkameCore\vendor\imGui;..\..\AkameCore\vendor\assimp\include;..\..\ECS\HeaderFiles;..\..\AkameCore\Header Files;..\..\AkameCore\vendor\pugixml\src;..\..\AkameCore\vendor\spdlog\include;..\..\AkameCore\vendor\PhysX\physx\include;..\..\AkameCore\vendor\PhysX\physx\source\physxextensions\src;..\..\AkameCore\vendor\PhysX\pxshared\include;..\..\AkameCore\vendor\PhysX\physx\source\foundation\include;..\..\AkameCore\vendor\PhysX\physx\snippets;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>..\..\AkameCore\vendor\glfw\include;..\..\AkameCore\vendor\single_include\nlohmann;..\..\AkameCore\vendor\glad-akame-;..\..\AkameCore\vendor;..\..\AkameCore\vendor\imGui;..\..\AkameCore\vendor\assimp\include;..\..\ECS\HeaderFiles;..\..\AkameCore\Header Files;..\..\AkameCore\vendor\pugixml\src;..\..\AkameCore\vendor\spdlog\include;..\..\AkameCore\vendor\PhysX\physx\include;..\..\AkameCore\vendor\PhysX\physx\source\physxextensions\src;..\..\AkameCore\vendor\PhysX\pxshared\include;..\..\AkameCore\vendor\PhysX\physx\source\foundation\include;..\..\AkameCore\vendor\PhysX\physx\snippets;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ResourceCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -103,11 +103,13 @@
     <ClInclude Include="ExporterUI.h" />
     <ClInclude Include="FileOpenSaveDialogBox.h" />
     <ClInclude Include="OS_Interface.h" />
+    <ClInclude Include="RefMEta.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="ExporterUI.cpp" />
     <ClCompile Include="FileOpenSaveDialogBox.cpp" />
     <ClCompile Include="OS_interface.cpp" />
+    <ClCompile Include="RefMEta.cpp" />
     <ClCompile Include="Source.cpp" />
   </ItemGroup>
   <ItemGroup>
